web6/test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: busybox
  namespace: myapp
  labels:
    app: busybox
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  template:
    metadata:
      labels:
        app: busybox
    spec:
      containers:
        - name: busybox
          image: busybox:1.36.1-glibc
          stdin: true
          tty: true
          args: ["sh"]
