web6/mysql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: myapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: mysql:8
          ports:
            - containerPort: 3306
          volumeMounts: # mount the volume to the container
            - name: mysql-data
              mountPath: /var/lib/mysql # would overwrite existing data in container
              # subPath: mysql/test.sql # optional, to mount a subdirectory or single file, the test.sql co-exists in /var/lib/mysql without overwriting
      volumes: # declare the volume to be mounted
        - name: mysql-data
          persistentVolumeClaim:
            claimName: mysql-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: myapp
spec:
  selector:
    app: mysql
  ports:
    - name: mysql
      port: 3306
      targetPort: 3306
      protocol: TCP
